syntax = "proto3";

package permissionBase;
import "google/protobuf/wrappers.proto";
option go_package="./permissionBase";

// 用户状态的枚举
enum UserState {
  USER_STATE_UNKNOWN = 0; // 未知
  USER_STATE_DISABLE = -1; // 禁用
  USER_STATE_ENABLE = 1; // 启用
}

// 用户性别的枚举
enum UserGender {
  USER_Gender_UNKNOWN = 0; // 未知
  USER_Gender_MALE = 1; // 男
  USER_GENDER_FEMALE = 2; // 女
}

// 菜单状态的枚举
enum MenuState {
  MENU_STATE_UNKNOWN = 0; // 未知
  MENU_STATE_DISABLE = -1; // 禁用
  MENU_STATE_ENABLE = 1; // 启用
}

// 创建用户的请求
message CreateUserRequest {
  string username = 1;
  string nickname = 2;
  string password = 3;
  string mobile = 4;
  string email = 5;
  UserGender gender = 6;
}

// 创建用户的响应
message CreateUserResponse {
  int64 id = 1;
}

// 登陆的请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登陆的响应
message LoginResponse {
  int64 id = 1;
  string username = 2;
  string nickname = 3;
  string token = 4;
}

// 创建权限的请求
message CreatePermissionRequest {
  string user_id = 1;
  string permission_name = 2;
  string permission_desc = 3;
}

// 创建权限的响应
message CreatePermissionResponse {
  int64 id = 1;
}

// 创建菜单的请求
message CreateMenuRequest {
  int64 parent_id = 1;
  string name = 2;
  string icon = 3;
  string path = 4;
  int64 sort = 5;
}

// 创建菜单的响应
message CreateMenuResponse {

}

// 更新菜单的请求
message UpdateMenuRequest {
  int64 id = 1;
  google.protobuf.Int64Value parent_id = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue icon = 4;
  google.protobuf.StringValue path = 5;
  google.protobuf.Int64Value sort = 6;
  google.protobuf.Int64Value state = 7;
}

// 更新菜单的响应
message UpdateMenuResponse {

}

// 创建角色的请求
message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

// 创建角色的响应
message CreateRoleResponse {

}



service PermissionBase {
  // CreateMenu 创建菜单
  rpc CreateMenu(CreateMenuRequest) returns(CreateMenuResponse);
  // CreatePermission 创建权限
  rpc CreatePermission(CreatePermissionRequest) returns(CreatePermissionResponse);
  // UpdateMenu 更新菜单
  rpc UpdateMenu(UpdateMenuRequest) returns(UpdateMenuResponse);
  // CreateRole 创建角色
  rpc CreateRole(CreateRoleRequest) returns(CreateRoleResponse);
}

service UserBase {
  // CreateUser 创建用户
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse);
  // Login 登录
  rpc Login(LoginRequest) returns(LoginResponse);
}
